# sensor_send_https

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/UartAPI/: CMakeLists.txt  UartAPI.cpp  UartAPI.h
components/a7670/: A7670.cpp  A7670.h  CMakeLists.txt  Kconfig
components/https_client/: CMakeLists.txt  HttpsClient.cpp  HttpsClient.h  Kconfig
components/image_receiver/: CMakeLists.txt  ImageReceiver.cpp  ImageReceiver.h
components/json_parser/: CMakeLists.txt  JsonParser.cpp  JsonParser.h  README.md
components/nvs_storage/: CMakeLists.txt  NvsStorage.cpp  NvsStorage.h
components/wifi_client/: CMakeLists.txt  Kconfig  WifiClient.cpp  WifiClient.h
main/: CMakeLists.txt  Kconfig  sensor_send.cpp
